6) QwtPlotDirectPainter::drawSeries bad translation removed
7) QwtPlotIntervalCurve: drawing of symbols fixed
8) QwtPlotlayout: minor layout bufs fixed
9) Usage of QwtPlotRasterItem::pixelHint fixed
10) QwtPlotRenderer: several minor fixes
11) QwtRasterData: CONREC algorithm fixed
12) QwtThermo: layout code fixed
13) QwtThermo: memory leak fixed
14) QwtMmlDocument: compiler issues

Release 6.0.1
===================

Changes
-------
1) Incompatibilities with Qt < 4.6.1 fixed
2) Reduce warnings with pedantic compiler options
3) Examples fixed
4) Legend identifiers of with symbol and line fixed
5) simpleplot example added
6) QwtThermo layout code fixed
7) QwtPickerPolygonMachine modified according to the documented transtions

Release 6.0.0
===================

Changes
-------
1) Qt3 support dropped
2) QwtPlot layout/render code ported from int to double
   Exported/printed documents in scalable formats like SVG or PDF
   are 100% scalable now.
3) Template base classes introduced for curve and curve data
   to be reusable in all plot items displaying series of samples.
4) New plot items
   - QwtPlotHistogram
   - QwtPlotIntervalCurve ( error bars or displaying the area between 2 curves )
   - QwtPlotSpectroCurve ( mapping the z value to a color )
5) Raster items
   - QwtMatrixRasterData introduced
   - More accurate rendering
   - Several API changes
   - Thread support for rendering spectrograms
6) QwtPlot::print moved to QwtPlotRenderer
7) Other new classes
   QwtColumnSymbol
   QwtDoublePoint3D
   QwtIntervalSymbol
   QwtPlotDirectPainter
   QwtSamplingThread
   QwtSystemClock
8) QwtPicker and friends reorganized, 
   QwtPickerTrackerMachine added for displaying a rubberband for
   mouse moves. Enter/Leave added to events, that are handled
   by the picker machines.
9) QwtScaleWidget::LayoutFlag added
   Introduced to control the direction of vertical axis titles.
10)QwtWeedingCurveFitter added
   QwtWeedingCurveFitter is an implementation of the Douglas/Peuker 